# self

./: .gitignore  LICENSE.txt  rust-toolchain.toml
ego/: Cargo.toml
ego/src/: main.rs
ego/src/ast/: lexer.rs  parser.rs
ego/src/ast/lexer_types/: mod.rs
ego/src/ast/nodes/: lambda_expression.rs  mod.rs
ego/src/commands/: compile.rs  mod.rs  run.rs
ego/src/compiler/: mod.rs
ego/src/compiler/handlers/: function_call_handler.rs
ego/src/core/error/: mod.rs
emulator/: Cargo.toml
emulator/src/: main.rs
scripts/: package-self.sh
self/: Cargo.toml
self/src/: events.rs  lib.rs  main.rs  memory.rs  opcodes.rs  stack.rs  vm.rs
self/src/core/: mod.rs
self/src/core/error/: ai_errors.rs  fs_errors.rs  memory_errors.rs  mod.rs  type_errors.rs
self/src/core/logs/: mod.rs
self/src/std/: heap_utils.rs  mod.rs
self/src/std/ai/: members.rs  mod.rs  types.rs
self/src/std/ai/prompts/: mod.rs
self/src/std/ai/providers/: mistral.rs  mod.rs  openai.rs
self/src/std/env/: members.rs  mod.rs
self/src/std/fs/: members.rs  mod.rs
self/src/std/http/: members.rs  mod.rs
self/src/std/io/: members.rs  mod.rs
self/src/std/mcp/: members.rs  mod.rs  types.rs
self/src/std/native/: members.rs  mod.rs  types.rs
self/src/std/net/: members.rs  mod.rs  types.rs  utils.rs
self/src/std/os/: mod.rs
self/src/std/path/: mod.rs
self/src/std/schedule/: members.rs  mod.rs  types.rs
self/src/std/selfmod/: members.rs  mod.rs
self/src/std/selfstring/: members.rs  mod.rs
self/src/std/vector/: members.rs  mod.rs
self/src/std/web/: members.rs  mod.rs  types.rs
self/src/types/: mod.rs
self/src/types/object/: func.rs  mod.rs  native_struct.rs  string.rs  structs.rs  vector.rs
