[package]
name = "ego"
version = "0.0.0-alpha.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
self-vm = { path = "../self" }
regex = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
lazy_static = "1.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }


[[bin]]
name = "compile-stdlib"
path = "src/tools/compile_stdlib.rs"
