[package]
name = "self-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls-native-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
regex = "1.11.1"
rustls = "0.23"
webpki-roots = "0.26"
